# meson-naga-template

./: .gitignore  README.md  meson.build
server/: main.cpp
subprojects/: drogon.wrap  trantor.wrap
